Resolve WCAG 2.0 issues from second AbilityNet report #246. Collection search design update (for High Contrast Mode)

--- a/src/main/resources/static/ukwa/scss/main.scss
+++ b/src/main/resources/static/ukwa/scss/main.scss
@@ -240,7 +240,7 @@ html, body {
     &:hover {
       @include themify($themes) {
         color: themed('textColor');
-        background-color: themed('backgroundColor');
+        background-color: themed('invertedTextColor');
       }
       border-color: transparent;
     }
